Fix sticky footer and filters visibility issues

--- a/01-frontend/src/css/FooterAndHeader/Footer.css
+++ b/01-frontend/src/css/FooterAndHeader/Footer.css
@@ -4,5 +4,15 @@
     width: 100%;
     position: sticky;
     text-align: center; top: 100%;
+
 }
 
+.line {
+    border-top: 1px solid rgba(128, 128, 128, 0.5);
+    width: 20%;
+    margin: 10px auto;
+}
+
+.push {
+    min-height: 2vh;
+}
