--- a/01-frontend/src/css/WarbandsBrowser/WarbandsDisplay.css
+++ b/01-frontend/src/css/WarbandsBrowser/WarbandsDisplay.css
@@ -22,9 +22,5 @@
 .clear-filters {
     display: inline-block;
     float: right;
-
-}
-
-.clear-filters {
     white-space: nowrap;
 }
